@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mtime.com"
        name="MTime"
-       version="1.1.4"
+       version="1.1.5"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
